# better-chat

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
chat_app/client/: app.py
chat_app/client/ui/: chat_display.py  input_area.py  model_list.py
chat_app/core/: interfaces.py  models.py
chat_app/services/: ollama.py
