[project]
name = "better-chat"
version = "0.1.0"
description = "A scalable terminal chat application using Textual"
authors = [
    {name = "Vardges", email="vardges.zakaryan@outlook.com"},
]
dependencies = [
    "textual>=0.40.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat_app"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "deptry>=0.24.0",
    "ruff>=0.14.6",
]
